--- a/privacy.html
+++ b/privacy.html
@@ -200,13 +200,13 @@
         <main>
             <section>
                 <h2>Introduction</h2>
-                <p>This Privacy Policy describes how Video Notes ("we," "our," or "the app") collects, uses, and protects your information when you use our mobile application. Video Notes is developed by Denys Negometyanov.</p>
+                <p>This Privacy Policy describes how Video Notes ("we," "our," or "the app") collects, uses, and protects your information when you use our mobile application. Video Notes is developed by Denys Nehometianov.</p>
                 <p>We are committed to protecting your privacy and being transparent about our data practices. This policy complies with applicable privacy laws including the General Data Protection Regulation (GDPR), California Consumer Privacy Act (CCPA), and Children's Online Privacy Protection Act (COPPA).</p>
             </section>
 
             <section>
                 <h2>Data Controller</h2>
-                <p><strong>Denys Negometyanov</strong><br>
+                <p><strong>Denys Nehometianov</strong><br>
                 Email: <a href="mailto:videonotes.ai@gmail.com">videonotes.ai@gmail.com</a></p>
             </section>
 
