Clarify AI content storage: cached without identifiers

--- a/privacy.html
+++ b/privacy.html
@@ -268,7 +268,7 @@
                 <ul>
                     <li>Is created based on the video content you choose to analyze</li>
                     <li>Is processed through secure API connections</li>
-                    <li>Is stored only on your local device</li>
+                    <li>May be cached on our servers to improve performance, but <strong>without any user, device, or app identifiers</strong> — meaning we cannot link summaries to any individual user</li>
                 </ul>
             </section>
 
