Add developer name to privacy policy introduction

--- a/privacy.html
+++ b/privacy.html
@@ -168,7 +168,7 @@
         <main>
             <section>
                 <h2>Introduction</h2>
-                <p>Video Notes ("we," "us," or "our") values the privacy of our users. This Privacy Policy outlines how we collect, use, and safeguard your information when you use our iOS App. By using the App, you consent to the data practices described in this policy.</p>
+                <p>Denys Nehometianov ("Video Notes," "we," "us," or "our") values the privacy of our users. This Privacy Policy outlines how we collect, use, and safeguard your information when you use our iOS App. By using the App, you consent to the data practices described in this policy.</p>
             </section>
 
             <section>
