--- a/license-agreement.html
+++ b/license-agreement.html
@@ -158,73 +158,73 @@
 
         <main>
             <section>
-                <h2>Introduction</h2>
-                <p>These Terms of Use ("Terms") govern your access to and use of the Video Notes service ("Service"), developed by Denys Nehometianov ("Video Notes", "we", "us", or "our"). By accessing or using the Service, you agree to be bound by these Terms. If you do not agree to these Terms, you may not access or use the Service.</p>
+                <h2>Agreement to Terms</h2>
+                <p>Video Notes is an iOS application developed by Denys Nehometianov. These Terms of Use apply when you download, install, or use Video Notes. By using the app, you accept these terms. If you disagree with any part, please do not use the app.</p>
             </section>
 
             <section>
-                <h2>Eligibility</h2>
-                <p>To access and use the Service, you must be at least 16 years old or the minimum age required in your country. By using the Service, you represent and warrant that you meet these eligibility requirements.</p>
+                <h2>Who Can Use Video Notes</h2>
+                <p>You must be at least 16 years old to use this app. By using Video Notes, you confirm that you meet this age requirement.</p>
             </section>
 
             <section>
-                <h2>Privacy</h2>
-                <p>Your privacy is important to us. Please review our <a href="privacy.html">Privacy Policy</a>, which explains how we collect, use, and protect your personal information. By using the Service, you agree to the collection and use of your information in accordance with our Privacy Policy.</p>
+                <h2>Your Privacy</h2>
+                <p>We care about your privacy. Our <a href="privacy.html">Privacy Policy</a> describes what information we handle and how. Using Video Notes means you accept those practices.</p>
             </section>
 
             <section>
-                <h2>User Conduct</h2>
-                <p>You agree not to use the Service for any illegal activities, to infringe on the rights of others, or to distribute harmful or offensive content. Misuse of the Service may result in termination of access, and you are responsible for any consequences arising from your actions while using the Service.</p>
+                <h2>Acceptable Use</h2>
+                <p>Please use Video Notes responsibly. Do not use it for anything illegal, to violate others' rights, or to share harmful content. We may restrict access if the app is misused.</p>
             </section>
 
             <section>
-                <h2>Intellectual Property Rights</h2>
-                <p>Video Notes respects the intellectual property rights of others and expects users to do the same. The Service generates summaries based on the content of YouTube videos, and you must ensure you have the necessary rights to use the input content. Video Notes is not responsible for any copyright or trademark infringements resulting from user-generated summaries. Video Notes disclaims any warranties of merchantability, fitness for a particular purpose, and non-infringement.</p>
+                <h2>Content and Copyright</h2>
+                <p>Video Notes creates summaries from YouTube video content. You are responsible for ensuring you have the right to summarize the videos you choose. We are not liable for any copyright issues that may arise from summaries you create or share.</p>
             </section>
 
             <section>
-                <h2>Third-Party Services</h2>
-                <p>Users must comply with the terms and conditions of any third-party services or platforms integrated with Video Notes, such as YouTube. Video Notes is not responsible for the content, policies, or practices of these third-party services.</p>
+                <h2>YouTube and Other Services</h2>
+                <p>Video Notes works with YouTube content. You must also follow YouTube's terms when using our app. We have no control over YouTube's policies or content availability.</p>
             </section>
 
             <section>
-                <h2>Disclaimer of Warranties</h2>
-                <p>Video Notes provides the Service "as is" and does not guarantee the accuracy, reliability, or completeness of the AI-generated summaries. Users assume all risks associated with using the Service, and Video Notes disclaims any warranties, express or implied. Video Notes' liability for any damages arising from the use of the Service is limited to the extent permitted by law.</p>
+                <h2>No Guarantees</h2>
+                <p>Video Notes is provided "as is." AI-generated summaries may not always be accurate or complete. We do our best, but we cannot guarantee perfect results. You use the app at your own discretion.</p>
             </section>
 
             <section>
-                <h2>Changes to the Terms</h2>
-                <p>We may update these Terms from time to time. We will notify you of any changes by posting the new Terms on this page. You are advised to review this page periodically for any changes. Changes to these Terms are effective when they are posted on this page.</p>
+                <h2>Updates to These Terms</h2>
+                <p>We may revise these terms occasionally. When we do, we will update the date at the top of this page. Continued use of the app after changes means you accept the new terms.</p>
             </section>
 
             <section>
-                <h2>Indemnification</h2>
-                <p>You agree to indemnify, defend, and hold harmless Video Notes and its developer from any claims, damages, losses, or expenses (including reasonable attorneys' fees) arising out of or in connection with your use of the Service, your violation of these Terms, or your infringement of any intellectual property or other rights of any third party.</p>
+                <h2>Your Responsibility</h2>
+                <p>You agree to take responsibility for how you use Video Notes. If your use of the app causes any legal issues or damages, you agree to cover any resulting costs or claims.</p>
             </section>
 
             <section>
-                <h2>Limitation of Liability</h2>
-                <p>To the extent permitted by law, Video Notes shall not be liable for any direct, indirect, incidental, special, consequential, or exemplary damages arising from the use of or inability to use the Service, even if Video Notes has been advised of the possibility of such damages.</p>
+                <h2>Limits on Our Liability</h2>
+                <p>We are not responsible for any damages that result from using or being unable to use Video Notes. This includes lost data, lost profits, or any other losses, to the maximum extent allowed by law.</p>
             </section>
 
             <section>
-                <h2>Force Majeure</h2>
-                <p>Video Notes shall not be liable for any delay or failure to perform its obligations under these Terms due to circumstances beyond its reasonable control, such as natural disasters, acts of God, war, terrorism, labor disputes, or government actions.</p>
+                <h2>Events Beyond Our Control</h2>
+                <p>We are not responsible for service interruptions caused by events outside our control, such as natural disasters, internet outages, or other unforeseen circumstances.</p>
             </section>
 
             <section>
-                <h2>Modifications and Termination</h2>
-                <p>Video Notes reserves the right to modify, suspend, or terminate the Service or user access to the Service at any time, with or without notice. Consequences of termination may include loss of access to the Service and deletion of user data.</p>
+                <h2>Service Changes</h2>
+                <p>We may update, pause, or discontinue Video Notes at any time. We may also restrict access if needed. If the service ends, your locally stored data remains on your device.</p>
             </section>
 
             <section>
-                <h2>Severability</h2>
-                <p>If any provision of these Terms is held to be invalid or unenforceable by a court, the remaining provisions of these Terms will remain in effect. These Terms constitute the entire agreement between you and Video Notes regarding the Service and supersede any prior agreements.</p>
+                <h2>General Provisions</h2>
+                <p>If any part of these terms cannot be enforced, the rest still applies. These terms represent the complete agreement between you and Video Notes.</p>
             </section>
 
             <section class="contact-section">
-                <h2>Contact Us</h2>
-                <p>If you have any questions about these Terms, please contact us:</p>
+                <h2>Questions?</h2>
+                <p>Reach out if you have any questions about these terms:</p>
                 <a href="mailto:videonotes.ai@gmail.com" class="email-link">videonotes.ai@gmail.com</a>
             </section>
         </main>
