Add Apple-required EULA provisions
- License: Explicit license grant for iOS devices
- Refunds: Clarify Apple handles App Store refunds
- Apple App Store: Apple as third-party beneficiary
- Consumer Rights: EU consumer rights preservation
- Liability: "to extent permitted by law" + statutory rights

--- a/license-agreement.html
+++ b/license-agreement.html
@@ -159,7 +159,12 @@
         <main>
             <section>
                 <h2>Agreement to Terms</h2>
-                <p>Video Notes is an iOS application developed by Denys Nehometianov. These Terms of Use apply when you download, install, or use Video Notes. By using the app, you accept these terms. If you disagree with any part, please do not use the app.</p>
+                <p>Video Notes is an iOS application developed by Denys Nehometianov ("Developer"). These Terms of Use apply when you download, install, or use Video Notes. By using the app, you accept these terms. If you disagree with any part, please do not use the app.</p>
+            </section>
+
+            <section>
+                <h2>License</h2>
+                <p>The Developer grants you a limited, non-exclusive, non-transferable license to download, install, and use Video Notes on any Apple device you own or control, subject to these terms and the Apple App Store Terms of Service.</p>
             </section>
 
             <section>
@@ -193,6 +198,11 @@
             </section>
 
             <section>
+                <h2>Refunds</h2>
+                <p>Video Notes is a free app. If you made any purchases through the App Store, refund requests are handled by Apple according to their policies. Please contact Apple Support for refund inquiries.</p>
+            </section>
+
+            <section>
                 <h2>Updates to These Terms</h2>
                 <p>We may revise these terms occasionally. When we do, we will update the date at the top of this page. Continued use of the app after changes means you accept the new terms.</p>
             </section>
@@ -204,7 +214,7 @@
 
             <section>
                 <h2>Limits on Our Liability</h2>
-                <p>We are not responsible for any damages that result from using or being unable to use Video Notes. This includes lost data, lost profits, or any other losses, to the maximum extent allowed by law.</p>
+                <p>To the extent permitted by applicable law, we are not responsible for any indirect damages that result from using or being unable to use Video Notes. Nothing in these terms limits your statutory rights as a consumer.</p>
             </section>
 
             <section>
@@ -218,8 +228,18 @@
             </section>
 
             <section>
+                <h2>Apple App Store</h2>
+                <p>You acknowledge that these terms are between you and the Developer only, not with Apple. Apple has no obligation to provide support or maintenance for Video Notes. Apple and its subsidiaries are third-party beneficiaries of these terms and may enforce them against you.</p>
+            </section>
+
+            <section>
+                <h2>Consumer Rights</h2>
+                <p>These terms do not affect any rights you have under consumer protection laws in your country that cannot be waived or limited by agreement. If you are in the European Union, you retain all mandatory consumer rights under EU law.</p>
+            </section>
+
+            <section>
                 <h2>General Provisions</h2>
-                <p>If any part of these terms cannot be enforced, the rest still applies. These terms represent the complete agreement between you and Video Notes.</p>
+                <p>If any part of these terms cannot be enforced, the rest still applies. These terms represent the complete agreement between you and Video Notes regarding use of the app.</p>
             </section>
 
             <section class="contact-section">
