Revise EULA for Apple App Store minimum terms compliance

--- a/license-agreement.html
+++ b/license-agreement.html
@@ -159,87 +159,77 @@
         <main>
             <section>
                 <h2>Agreement to Terms</h2>
-                <p>Video Notes is an iOS application developed by Denys Nehometianov ("Developer"). These Terms of Use apply when you download, install, or use Video Notes. By using the app, you accept these terms. If you disagree with any part, please do not use the app.</p>
+                <p>Video Notes is a free iOS application developed by Denys Nehometianov ("Developer"). By downloading, installing, or using Video Notes, you agree to these terms. If you do not agree, please do not use the app.</p>
             </section>
 
             <section>
                 <h2>License</h2>
-                <p>The Developer grants you a limited, non-exclusive, non-transferable license to download, install, and use Video Notes on any Apple device you own or control, subject to these terms and the Apple App Store Terms of Service.</p>
+                <p>The Developer grants you a limited, non-exclusive, non-transferable, revocable license to use Video Notes on any Apple device you own or control, for personal, non-commercial use, subject to these terms and the Apple Media Services Terms and Conditions.</p>
             </section>
 
             <section>
-                <h2>Who Can Use Video Notes</h2>
-                <p>You must be at least 16 years old to use this app. By using Video Notes, you confirm that you meet this age requirement.</p>
+                <h2>Age Requirement</h2>
+                <p>You must be at least 16 years old to use this app.</p>
             </section>
 
             <section>
-                <h2>Your Privacy</h2>
-                <p>We care about your privacy. Our <a href="privacy.html">Privacy Policy</a> describes what information we handle and how. Using Video Notes means you accept those practices.</p>
+                <h2>Privacy</h2>
+                <p>Our <a href="privacy.html">Privacy Policy</a> explains how we handle your information. By using Video Notes, you agree to those practices.</p>
             </section>
 
             <section>
                 <h2>Acceptable Use</h2>
-                <p>Please use Video Notes responsibly. Do not use it for anything illegal, to violate others' rights, or to share harmful content. We may restrict access if the app is misused.</p>
+                <p>Use Video Notes responsibly. Do not use it for illegal purposes, to violate others' rights, or to distribute harmful content. We may restrict access if the app is misused.</p>
             </section>
 
             <section>
                 <h2>Content and Copyright</h2>
-                <p>Video Notes creates summaries from YouTube video content. You are responsible for ensuring you have the right to summarize the videos you choose. We are not liable for any copyright issues that may arise from summaries you create or share.</p>
+                <p>Video Notes generates summaries from YouTube video content. You are responsible for your use of the summaries you create. The Developer, not Apple, is responsible for addressing any claims that Video Notes or your use of it infringes third-party intellectual property rights.</p>
             </section>
 
             <section>
-                <h2>YouTube and Other Services</h2>
-                <p>Video Notes works with YouTube content. You must also follow YouTube's terms when using our app. We have no control over YouTube's policies or content availability.</p>
+                <h2>Third-Party Services</h2>
+                <p>Video Notes relies on YouTube. You must comply with YouTube's terms of service. We do not control third-party content or availability.</p>
             </section>
 
             <section>
-                <h2>No Guarantees</h2>
-                <p>Video Notes is provided "as is." AI-generated summaries may not always be accurate or complete. We do our best, but we cannot guarantee perfect results. You use the app at your own discretion.</p>
+                <h2>Warranty Disclaimer</h2>
+                <p>Video Notes is provided "as is" without warranty of any kind. AI-generated summaries may not be accurate or complete. To the extent permitted by law, the Developer disclaims all warranties, express or implied. If the app fails to conform to any applicable warranty, you may notify Apple, and Apple will have no other warranty obligation. Apple has no obligation to provide maintenance or support.</p>
             </section>
 
             <section>
-                <h2>Updates to These Terms</h2>
-                <p>We may revise these terms occasionally. When we do, we will update the date at the top of this page. Continued use of the app after changes means you accept the new terms.</p>
-            </section>
-
-            <section>
-                <h2>Your Responsibility</h2>
-                <p>You agree to take responsibility for how you use Video Notes. If your use of the app causes any legal issues or damages, you agree to cover any resulting costs or claims.</p>
-            </section>
-
-            <section>
-                <h2>Limits on Our Liability</h2>
-                <p>To the extent permitted by applicable law, we are not responsible for any indirect damages that result from using or being unable to use Video Notes. Nothing in these terms limits your statutory rights as a consumer.</p>
-            </section>
-
-            <section>
-                <h2>Events Beyond Our Control</h2>
-                <p>We are not responsible for service interruptions caused by events outside our control, such as natural disasters, internet outages, or other unforeseen circumstances.</p>
+                <h2>Limitation of Liability</h2>
+                <p>To the extent permitted by law, the Developer is not liable for any indirect, incidental, or consequential damages arising from your use of Video Notes. Apple has no responsibility for any claims related to Video Notes, including product liability claims, claims that the app fails to meet legal or regulatory requirements, or claims under consumer protection laws.</p>
             </section>
 
             <section>
                 <h2>Service Changes</h2>
-                <p>We may update, pause, or discontinue Video Notes at any time. We may also restrict access if needed. If the service ends, your locally stored data remains on your device.</p>
+                <p>We may update, suspend, or discontinue Video Notes at any time. Your locally stored data remains on your device.</p>
             </section>
 
             <section>
-                <h2>Apple App Store</h2>
-                <p>You acknowledge that these terms are between you and the Developer only, not with Apple. Apple has no obligation to provide support or maintenance for Video Notes. Apple and its subsidiaries are third-party beneficiaries of these terms and may enforce them against you.</p>
+                <h2>Changes to Terms</h2>
+                <p>We may update these terms. Changes take effect when posted, with an updated date at the top of this page.</p>
+            </section>
+
+            <section>
+                <h2>Apple</h2>
+                <p>These terms are between you and the Developer, not Apple. Apple is not responsible for Video Notes or its content. Apple and its subsidiaries are third-party beneficiaries of these terms and, upon your acceptance, have the right to enforce them against you.</p>
             </section>
 
             <section>
                 <h2>Consumer Rights</h2>
-                <p>These terms do not affect any rights you have under consumer protection laws in your country that cannot be waived or limited by agreement. If you are in the European Union, you retain all mandatory consumer rights under EU law.</p>
+                <p>Nothing in these terms limits any consumer rights that cannot be waived under applicable law. If you are in the European Union, you retain all mandatory rights under EU consumer protection law.</p>
             </section>
 
             <section>
-                <h2>General Provisions</h2>
-                <p>If any part of these terms cannot be enforced, the rest still applies. These terms represent the complete agreement between you and Video Notes regarding use of the app.</p>
+                <h2>General</h2>
+                <p>If any provision is unenforceable, the remaining terms remain in effect. These terms constitute the entire agreement regarding Video Notes.</p>
             </section>
 
             <section class="contact-section">
-                <h2>Questions?</h2>
-                <p>Reach out if you have any questions about these terms:</p>
+                <h2>Contact</h2>
+                <p>Questions about these terms? Contact the Developer:</p>
                 <a href="mailto:videonotes.ai@gmail.com" class="email-link">videonotes.ai@gmail.com</a>
             </section>
         </main>
