Remove Developer IP responsibility clause from Content section

--- a/license-agreement.html
+++ b/license-agreement.html
@@ -184,7 +184,7 @@
 
             <section>
                 <h2>Content and Copyright</h2>
-                <p>Video Notes respects intellectual property rights and expects users to do the same. The app generates summaries from YouTube video content, and you must ensure you have the necessary rights to use the content you choose to summarize. You are solely responsible for any summaries you create, save, or share. The Developer is not responsible for any copyright or trademark infringements resulting from your use of Video Notes. The Developer, not Apple, is responsible for addressing any claims that Video Notes itself infringes third-party intellectual property rights.</p>
+                <p>Video Notes respects intellectual property rights and expects users to do the same. The app generates summaries from YouTube video content, and you must ensure you have the necessary rights to use the content you choose to summarize. You are solely responsible for any summaries you create, save, or share. The Developer is not responsible for any copyright or trademark infringements resulting from your use of Video Notes.</p>
             </section>
 
             <section>
