--- a/license-agreement.html
+++ b/license-agreement.html
@@ -183,7 +183,7 @@
             </section>
 
             <section>
-                <h2>Content and Copyright</h2>
+                <h2>Intellectual Property Rights</h2>
                 <p>Video Notes respects intellectual property rights and expects users to do the same. The app generates summaries from YouTube video content, and you must ensure you have the necessary rights to use the content you choose to summarize. You are solely responsible for any summaries you create, save, or share. Neither the Developer nor Apple is responsible for any copyright or trademark infringements resulting from your use of Video Notes.</p>
             </section>
 
